# pytest

./: pyproject.toml
src/: beauty_db.sql  database_manager.py  target_query_v1.sql  target_query_v2.sql  test_beauty_ingredients.py  test_beauty_ingredients_1.py
